--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,8 +3,10 @@ logging:
   level:
     com.sungmin.singletrain_borad: debug
     org.springframework.web.servlet: debug
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3306"
-    username: "sungmin"
+    driver-class-name: org.postgresql.Driver
+    url: "jdbc:postgresql://localhost:5432/singletrain_board"
+    username: "trainer"
     password: "artl0108!"
